--- a/public/data/project.json
+++ b/public/data/project.json
@@ -12,10 +12,13 @@
                 "priorite": "P0",
                 "numero": "défaut 1",
                 "type": "défaut",
+                "sousType": {
+                    "le type de defaut": ""
+                },
                 "description": "pas d'enregistrement de données dans l'historique après avoir parcouru le produit",
                 "responsable": "Robin",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-11-01",
                 "Estimation temps": "0h",
                 "status": "Nouveau",
                 "acceptable": false,
@@ -38,10 +41,13 @@
                 "priorite": "P0",
                 "numero": "défaut 2",
                 "type": "défaut",
+                "sousType": {
+                    "le type de defaut": ""
+                },
                 "description": "pouvez pas afficher l'image du produit en grand",
                 "responsable": "Robin",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-10-05",
                 "Estimation temps": "0h",
                 "status": "Nouveau",
                 "acceptable": false,
@@ -64,11 +70,14 @@
                 "priorite": "P0",
                 "numero": "défaut 3",
                 "type": "défaut",
+                "sousType": {
+                    "le type de defaut": ""
+                },
                 "description": "filtre par marque ne fonctionne pas",
                 "responsable": "A réclamer",
                 "Estimation temps": "0h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-10-13",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
@@ -94,7 +103,7 @@
                 "responsable": "A réclamer",
                 "Estimation temps": "0h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-12-01",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
@@ -120,7 +129,7 @@
                 "responsable": "A réclamer",
                 "Estimation temps": "0h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-10-17",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
@@ -146,7 +155,7 @@
                 "responsable": "A réclamer",
                 "Estimation temps": "100h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-12-11",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
@@ -168,11 +177,14 @@
                 "priorite": "P0",
                 "numero": "D1",
                 "type": "demande",
+                "sousType": {
+                    "le type de demande": ""
+                },
                 "description": "suppression des articles non valables du panier",
                 "responsable": "A réclamer",
                 "Estimation temps": "0h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-09-28",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
@@ -194,11 +206,14 @@
                 "priorite": "P1",
                 "numero": "D2",
                 "type": "demande",
+                "sousType": {
+                    "le type de demande": ""
+                },
                 "description": "Gestion du module d'adresse",
                 "responsable": "A réclamer",
                 "Estimation temps": "0h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-09-26",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
@@ -220,11 +235,14 @@
                 "priorite": "P0",
                 "numero": "D3",
                 "type": "demande",
+                "sousType": {
+                    "le type de demande": ""
+                },
                 "description": "Module de connexion de l'utilisateur",
                 "responsable": "A réclamer",
                 "Estimation temps": "0h",
                 "version": "v 1.0",
-                "date a commencer": "",
+                "date a commencer": "2022-10-27",
                 "status": "Nouveau",
                 "acceptable": false,
                 "notes": [
